fix timesheet overflow

--- a/frontend/src/app/components/timesheet-entry-container/timesheet-entry-container.component.css
+++ b/frontend/src/app/components/timesheet-entry-container/timesheet-entry-container.component.css
@@ -48,7 +48,6 @@
   background-color: black;
   color: white;
   padding: 13px 10px;
-  border: 1px solid white;
 }
 
 .timesheet-table tr td {
