--- a/frontend/src/app/components/timesheet/timesheet.component.css
+++ b/frontend/src/app/components/timesheet/timesheet.component.css
@@ -4,7 +4,7 @@
   justify-content: center;
   text-align: center;
   margin: 5em;
-  padding: 2em 2em;
+  padding: 2em 1.5em;
   border-radius: 15px;
 }
 
